Issue #27874: Allows use of pythonXX.zip file as landmark on Windows